Refactored ingredients page to fix alignment issues.

--- a/app/assets/stylesheets/components/_expiring.scss
+++ b/app/assets/stylesheets/components/_expiring.scss
@@ -11,7 +11,7 @@
   border-radius: 16px;
   box-shadow: 0px 4px 12px 2px rgba(0,0,0,0.2);
   background-color: $ft-pink;
-  height: 34px;
+  height: 36px;
 }
 
 .alert-icon {
@@ -20,10 +20,12 @@
 .expiring-message {
   padding: 4px;
   font-size: 16px;
-  margin-left: -22px;
+  margin-left: -28px;
   font-weight: bold;
   color: white;
   z-index: 2;
+  overflow: visible;
+  white-space: normal;
 }
 
 @keyframes pulseRotate {
