--- a/app/assets/stylesheets/components/_pantry_card.scss
+++ b/app/assets/stylesheets/components/_pantry_card.scss
@@ -5,7 +5,7 @@
   background-color: white;
 }
 
-.card {
+.ingredient-card {
   padding: 5px 12px;
   background-color: white;
   border: none;
@@ -13,84 +13,9 @@
   border-radius: 16px;
   position: relative;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
-//   // flex-direction: row;
-}
-
-.card-title {
-  margin: 0px;
-  font-size: 20px;
-  font-weight: bold;
-  overflow: visible;
-  white-space: normal;
-  // max-width: calc(100% - 150px);
-}
-
-.card-content {
-  // margin: 0px;
-//   display: flex;
-  font-size: 20px;
-//   // flex-direction: column;
-text-align: center;
-align-items: center;
-}
-
-.card-detail {
-//   margin-right: 20px;
-display: flex;
-// text-align: center;
-align-items: center;
-justify-content: center;
-}
-
-#amount {
-  margin-right: 5px;
-}
-
-// .edit-icon {
-//   position: absolute;
-//   right: 45px;
-//   top: 50%;
-//   transform: translateY(-50%);
-//   background: none;
-//   border: none;
-// }
-
-.delete-icon {
-  position: absolute;
-  right: 4px;
-  top: 50%;
-  transform: translateY(-50%);
-  background: none;
-  border: none;
-  border: 0px;
-  border-top: 0px;
-  border-bottom: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  background-color: white;
-  font-size: 32px;
-  color: grey;
-}
-
-// .card-date {
-//   position: absolute;
-//   right: 60px;
-//   top: 50%;
-//   transform: translateY(-50%);
-// }
-
-.expiring-notice {
-  background: gray;
-  border-radius: 8px;
-  padding: 4px;
-  color: white;
-}
-
-.expired-notice {
-  background: $ft-pink;
-  border-radius: 8px;
-  padding: 4px;
-  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card-picture-box {
@@ -104,7 +29,62 @@ justify-content: center;
 .card-image {
   height: 100%;
   width: 100%;
+}
 
+.card-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-title {
+  margin: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  overflow: visible;
+  white-space: normal;
+  // max-width: calc(100% - 150px);
+}
+
+.amount-and-unit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#amount {
+  margin-right: 5px;
+}
+
+.delete-icon {
+  // position: absolute;
+  // right: 4px;
+  // top: 50%;
+  // transform: translateY(-50%);
+  background: none;
+  border: none;
+  border: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  background-color: white;
+  font-size: 32px;
+  color: grey;
+}
+
+.expiring-notice {
+  background: gray;
+  border-radius: 8px;
+  padding: 4px;
+  color: white;
+}
+
+.expired-notice {
+  background: $ft-pink;
+  border-radius: 8px;
+  padding: 4px;
+  color: white;
 }
 
 .edit-field {
