--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -8,9 +8,9 @@
 
 .search-bar {
   margin-right: 16px;
-  height: 34px;
   position: relative;
   display: flex;
+  height: 36px;
 }
 
 .search-bar input {
